# pencil_producer

./: CMakeLists.txt  Makefile  PencilProducer.cbp  README.md  cmake_install.cmake  default.sav  references.txt
app/: CMakeLists.txt  Makefile  cmake_install.cmake  debugger.cpp  debugger.h  debugger.ui  debugmessage.cpp  debugmessage.h  debugmessage.ui  game.cpp  game.h  game.ui  gameover.ui  highscore.cpp  highscore.h  highscore.ui  main.cpp  moc_debugger.cpp  moc_debugmessage.cpp  moc_game.cpp  moc_gameover.cpp  moc_highscore.cpp  moc_welcome.cpp  pencil-producer  pencil-producer_automoc.cpp  ui_debugger.h  ui_debugmessage.h  ui_game.h  ui_gameover.h  ui_highscore.h  ui_welcome.h  welcome.cpp  welcome.h  welcome.ui
classes/: CMakeCache.txt  CMakeLists.txt  Makefile  apm.cpp  apm.h  bankbalance.cpp  bankbalance.h  cmake_install.cmake  graphite.cpp  graphite.h  intelligence.cpp  intelligence.h  marketing.cpp  marketing.h  pencil.cpp  pencil.h  wood.cpp  wood.h
helper/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  curl_helper.cpp  curl_helper.h
test/: CMakeLists.txt  Makefile  cmake_install.cmake  test-pencil-producer  tests.cpp
